tests/api/snapshots/api__snapshot_test__error_not_found.snap
---
source: tests/api/snapshot_test.rs
expression: json
---
{
  "error": "not_found",
  "message": "post(id=999999)를 찾을 수 없습니다"
}
