tests/api/snapshots/api__snapshot_test__error_unauthorized.snap
---
source: tests/api/snapshot_test.rs
expression: json
---
{
  "error": "unauthorized",
  "message": "인증이 필요합니다"
}
