tests/api/snapshots/api__snapshot_test__snapshot_not_found_error.snap
---
source: tests/api/snapshot_test.rs
expression: json
---
{
  "error": "not_found",
  "message": "[message]"
}
